--- a/.github/workflows/main_praktikum3kel3.yml
+++ b/.github/workflows/main_praktikum3kel3.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - Praktikum3Kel3
 
 on:
@@ -17,22 +13,36 @@ jobs:
       contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
 
+      # Caching Python dependencies to speed up future builds
+      - name: Cache Python dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-python-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-python-
+
       - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+
+      # Optional: Run tests (e.g., using pytest)
+      - name: Run tests with pytest
+        run: |
+          source venv/bin/activate
+          pytest --maxfail=1 --disable-warnings -q
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -44,7 +54,7 @@ jobs:
           path: |
             release.zip
             !venv/
-
+  
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -64,7 +74,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -78,4 +87,3 @@ jobs:
         with:
           app-name: 'Praktikum3Kel3'
           slot-name: 'Production'
-          
